--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "drizzle-kit": "^0.31.1",
     "drizzle-orm": "^0.43.1",
+    "lucide-react": "^0.511.0",
     "mysql2": "^3.14.1",
     "next": "15.3.2",
     "react": "^19.0.0",
